--- a/maven-guvnor-install-pojo-plugin/pom.xml
+++ b/maven-guvnor-install-pojo-plugin/pom.xml
@@ -27,9 +27,8 @@
             <artifactId>drools-framework-rest-guvnor</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.apache.commons</groupId>
+            <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>1.3.2</version>
         </dependency>
 
 
