--- a/drools-framework-kie-wb-parent/kie-drools-framework-rest/kie-drools-framework-rest-backend/pom.xml
+++ b/drools-framework-kie-wb-parent/kie-drools-framework-rest/kie-drools-framework-rest-backend/pom.xml
@@ -18,65 +18,53 @@
     <dependency>
       <groupId>org.chtijbug.drools</groupId>
       <artifactId>kie-drools-framework-rest-pojo</artifactId>
-      <version>${project.version}</version>
     </dependency>
 
     <dependency>
       <groupId>org.kie</groupId>
       <artifactId>kie-api</artifactId>
-      <version>${kie.wb.version}</version>
     </dependency>
     <dependency>
       <groupId>org.kie.workbench.services</groupId>
       <artifactId>kie-wb-common-services-api</artifactId>
-      <version>${kie.wb.version}</version>
     </dependency>
     <dependency>
       <groupId>org.uberfire</groupId>
       <artifactId>uberfire-api</artifactId>
-      <version>${version.org.uberfire}</version>
     </dependency>
     <dependency>
       <groupId>org.uberfire</groupId>
       <artifactId>uberfire-backend-server</artifactId>
-      <version>${version.org.uberfire}</version>
     </dependency>
     <dependency>
       <groupId>org.uberfire</groupId>
       <artifactId>uberfire-io</artifactId>
-      <version>${version.org.uberfire}</version>
     </dependency>
     <dependency>
       <groupId>org.uberfire</groupId>
       <artifactId>uberfire-nio2-model</artifactId>
-      <version>${version.org.uberfire}</version>
     </dependency>
 
     <dependency>
       <groupId>org.guvnor</groupId>
       <artifactId>guvnor-project-api</artifactId>
-      <version>${guvnor.version}</version>
     </dependency>
     <dependency>
       <groupId>org.guvnor</groupId>
       <artifactId>guvnor-structure-api</artifactId>
-      <version>${guvnor.version}</version>
     </dependency>
     <dependency>
       <groupId>org.guvnor</groupId>
       <artifactId>guvnor-services-api</artifactId>
-      <version>${guvnor.version}</version>
     </dependency>
     <dependency>
       <groupId>org.guvnor</groupId>
       <artifactId>guvnor-asset-mgmt-api</artifactId>
-      <version>${guvnor.version}</version>
     </dependency>
 
     <dependency>
       <groupId>org.guvnor</groupId>
       <artifactId>guvnor-project-builder</artifactId>
-      <version>${guvnor.version}</version>
       <exclusions>
         <exclusion>
           <artifactId>drools-compiler</artifactId>
@@ -94,22 +82,18 @@
     <dependency>
       <groupId>org.jboss.spec.javax.ws.rs</groupId>
       <artifactId>jboss-jaxrs-api_1.1_spec</artifactId>
-      <version>1.0.1.Final</version>
     </dependency>
     <dependency>
       <groupId>org.jboss.spec.javax.xml.bind</groupId>
       <artifactId>jboss-jaxb-api_2.2_spec</artifactId>
-      <version>1.0.1.Final</version>
     </dependency>
     <dependency>
       <groupId>org.jboss.resteasy</groupId>
       <artifactId>jaxrs-api</artifactId>
-                <version>${version.org.jboss.resteasy}</version>
     </dependency>
     <dependency>
       <groupId>org.jboss.resteasy</groupId>
       <artifactId>resteasy-cdi</artifactId>
-        <version>${version.org.jboss.resteasy}</version>
       <exclusions>
         <exclusion>
           <groupId>org.jboss.resteasy</groupId>
@@ -120,13 +104,11 @@
       <dependency>
           <groupId>org.jboss.resteasy</groupId>
           <artifactId>resteasy-jaxb-provider</artifactId>
-          <version>${version.org.jboss.resteasy}</version>
       </dependency>
     <!-- async processing using jbpm executor -->
     <dependency>
       <groupId>org.jbpm</groupId>
       <artifactId>jbpm-executor</artifactId>
-      <version>${jbpm.version}</version>
     </dependency>
     <dependency>
       <groupId>org.kie</groupId>
@@ -136,7 +118,10 @@
     <dependency>
       <groupId>org.apache.deltaspike.core</groupId>
       <artifactId>deltaspike-core-api</artifactId>
-      <version>0.4</version>
+    </dependency>
+    <dependency>
+      <groupId>org.uberfire</groupId>
+      <artifactId>uberfire-nio2-api</artifactId>
     </dependency>
   </dependencies>
 
