--- a/drools-framework-kie-wb-parent/kie-drools-framework-rest/kie-drools-framework-rest-pojo/pom.xml
+++ b/drools-framework-kie-wb-parent/kie-drools-framework-rest/kie-drools-framework-rest-pojo/pom.xml
@@ -28,7 +28,6 @@
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-multipart-provider</artifactId>
-            <version>${version.org.jboss.resteasy}</version>
             <exclusions>
                 <exclusion>
                     <artifactId>mail</artifactId>
@@ -36,7 +35,14 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jaxrs</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jaxb-provider</artifactId>
+        </dependency>
 
     </dependencies>
 
