--- a/pom.xml
+++ b/pom.xml
@@ -2930,16 +2930,14 @@
     </dependencies>
 
 
-    <!--distributionManagement>
-      <repository>
-        <id>chtijbug-release</id>
-        <name>chtijbug repo release</name>
-        <url>http://openesb-dev.org:8081/nexus/content/repositories/chtijbug-release/</url>
-      </repository>
-      <snapshotRepository>
-        <id>chtijbug-snapshot</id>
-        <name>chtijbug repo release</name>
-        <url>http://nexus.openesb-dev.org:8081/nexus/content/repositories/chtijbug-snapshot/</url>
-      </snapshotRepository>
-    </distributionManagement-->
+    <distributionManagement>
+        <snapshotRepository>
+            <id>sonatype-nexus-snapshots</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>sonatype-nexus-staging</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
 </project>
