Branding the workbench to chtijbug part 2:All is compiling now debug it

--- a/drools-framework-kie-wb-parent/kie-drools-framework-rest/kie-drools-framework-rest-pojo/pom.xml
+++ b/drools-framework-kie-wb-parent/kie-drools-framework-rest/kie-drools-framework-rest-pojo/pom.xml
@@ -33,6 +33,10 @@
                     <artifactId>mail</artifactId>
                     <groupId>javax.mail</groupId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.jboss.logging</groupId>
+                    <artifactId>jboss-logging</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
