--- a/pom.xml
+++ b/pom.xml
@@ -197,6 +197,11 @@
 
         <dependencies>
             <dependency>
+            <groupId>org.codehaus.jettison</groupId>
+            <artifactId>jettison</artifactId>
+            <version>1.3.5</version>
+        </dependency>
+            <dependency>
                 <groupId>org.chtijbug.drools</groupId>
                 <artifactId>kie-drools-framework-rest-backend</artifactId>
                 <exclusions>
