--- a/drools-framework-kie-server-parent/drools-framework-kie-server-webapp/pom.xml
+++ b/drools-framework-kie-server-parent/drools-framework-kie-server-webapp/pom.xml
@@ -20,9 +20,15 @@
           <groupId>org.chtijbug.drools</groupId>
           <artifactId>drools-framework-kie-server-extension</artifactId>
         </dependency-->
+
+
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <groupId>org.chtijbug.drools</groupId>
+            <artifactId>drools-framework-kie-server-rest-drools</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.chtijbug.drools</groupId>
+            <artifactId>drools-framework-kie-server-services-drools</artifactId>
         </dependency>
         <dependency>
             <groupId>org.kie.server</groupId>
