--- a/drools-framework-kie-server-parent/pom.xml
+++ b/drools-framework-kie-server-parent/pom.xml
@@ -12,6 +12,8 @@
 
     <artifactId>drools-framework-kie-server-parent</artifactId>
     <modules>
+        <module>drools-framework-kie-server-services-drools</module>
+        <module>drools-framework-kie-server-rest-drools</module>
         <module>drools-framework-kie-server-webapp</module>
         <module>drools-framework-kie-server-extension</module>
     </modules>
