--- a/pom.xml
+++ b/pom.xml
@@ -198,6 +198,16 @@
 
         <dependencies>
             <dependency>
+                <groupId>org.chtijbug.drools</groupId>
+                <artifactId>drools-framework-kie-server-services-drools</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.kie.server</groupId>
+                <artifactId>kie-server-services-commons</artifactId>
+                <version>${kie.wb.version}</version>
+            </dependency>
+            <dependency>
             <groupId>org.codehaus.jettison</groupId>
             <artifactId>jettison</artifactId>
             <version>1.3.5</version>
@@ -211,6 +221,16 @@
                         <groupId>javax.activation</groupId>
                     </exclusion>
                 </exclusions>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.chtijbug.drools</groupId>
+                <artifactId>drools-framework-kie-server-rest-drools</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.chtijbug.drools</groupId>
+                <artifactId>drools-framework-kie-server-services-drools</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
@@ -2926,12 +2946,7 @@
                 <version>${version.org.jboss.byteman}</version>
             </dependency>
 
-            <dependency>
-                <groupId>org.kie.server</groupId>
-                <artifactId>kie-server-services-common</artifactId>
-                <version>${version.org.drools}</version>
 
-            </dependency>
             <dependency>
                 <groupId>org.kie.server</groupId>
                 <artifactId>kie-server-services-drools</artifactId>
@@ -3016,11 +3031,7 @@
                 <artifactId>kie-server-api</artifactId>
                 <version>${version.org.kie}</version>
             </dependency>
-            <dependency>
-                <groupId>org.kie.server</groupId>
-                <artifactId>kie-server-services-common</artifactId>
-                <version>${version.org.kie}</version>
-            </dependency>
+
             <dependency>
                 <groupId>org.kie.server</groupId>
                 <artifactId>kie-server-services-drools</artifactId>
