set good final name for assembly with no postfix id

--- a/drools-framework-kie-server-parent/drools-framework-kie-server-webapp/pom.xml
+++ b/drools-framework-kie-server-parent/drools-framework-kie-server-webapp/pom.xml
@@ -277,6 +277,7 @@
                 </executions>
                 <configuration>
                     <finalName>kie-server</finalName>
+                    <appendAssemblyId>false</appendAssemblyId>
                     <descriptors>
                         <!--descriptor>src/main/assembly/assembly-ee6-container.xml</descriptor-->
                         <descriptor>src/main/assembly/assembly-ee7-container.xml</descriptor>
